--- a/views/reviewer-review.pug
+++ b/views/reviewer-review.pug
@@ -80,5 +80,5 @@ html(lang='en')
     // CUSTOM JS
     script(type='module', src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js')
     script(nomodule='', src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js')
-    script(src='/javascripts/user-home.js')
+    script(src='/javascripts/sidebar.js')
     script(src='/javascripts/reviewer-review.js')
