--- a/views/reviewer-view.pug
+++ b/views/reviewer-view.pug
@@ -2,14 +2,14 @@ doctype html
 html
   head
     meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
-    meta(name='description', content='SLU Document Review Tracker')
+    meta(http-equiv='X-UA-Compatible' content='IE=edge')
+    meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    meta(name='description' content='SLU Document Review Tracker')
     title SLU Document Review Tracker
-    link(rel='icon', type='image/png', href='/images/slu_logo.png')
+    link(rel='icon' type='image/png' href='/images/slu_logo.png')
     // MAIN CSS
-    link(href='/stylesheets/user-home.css', rel='stylesheet')
-    link(href='/stylesheets/reviewer-view.css', rel='stylesheet')
+    link(href='/stylesheets/reviewer-home.css' rel='stylesheet')
+    link(href='/stylesheets/reviewer-view.css' rel='stylesheet')
   // SIDE BAR
   body
     nav.sidebar.close
@@ -17,7 +17,7 @@ html
       header
         .image-text
           span.image
-            img(src='/images/slu_logo.png', alt='logo')
+            img(src='/images/slu_logo.png' alt='logo')
           .text.header-text
             span.name Saint Louis University
             span.task Document Review Tracker
@@ -28,23 +28,23 @@ html
           ul.menu-links
             // HOME LINK
             li.nav-link
-              a(href='reviewer-home.html')
+              a(href='reviewer-home')
                 ion-icon(name='home-outline')
                 span.text.nav-text Home
             // TRANSACTION LIST LINK
             li.nav-link
-              a(href='reviewer-view.html')
+              a(href='reviewer-view')
                 ion-icon(name='file-tray-stacked-outline')
                 span.text.nav-text View Approvals
             // REVIEWING DOCS LINK
             li.nav-link
-              a(href='reviewer-review.html')
+              a(href='reviewer-review')
                 ion-icon(name='checkbox-outline')
                 span.text.nav-text For Approval
         .bottom-content
           // LOGOUT
           li
-            a(href='#')
+            a(href='/logout')
               ion-icon(name='log-out-outline')
               span.text.nav-text Logout
           // TOGGLE MODES
@@ -60,10 +60,11 @@ html
       .top
         .search-box
           ion-icon.search-icon(name='search-outline')
-          input(type='search', placeholder='Search...')
+          input(type='search' placeholder='Search...')
         .profile-details
-          img(src='/images/school.png', alt='')
-          span.user_name Juan Dela Cruz
+          img(src='/images/school.png' alt='')
+          span.user_name
+            p(id='username')
           ion-icon.profile-icon(name='radio-button-on-outline')
       .home-content
         .overview
@@ -95,7 +96,7 @@ html
         .history
           p No reviews available
     // CUSTOM JS
-    script(type='module', src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js')
-    script(nomodule='', src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js')
+    script(type='module' src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js')
+    script(nomodule='' src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js')
     script(src='/javascripts/sidebar.js')
     script(src='/javascripts/reviewer-view.js')
