--- a/views/reviewer-view.pug
+++ b/views/reviewer-view.pug
@@ -64,7 +64,7 @@ html
         .profile-details
           img(src='/images/school.png' alt='')
           span.user_name
-            p(id='username')
+            p#username
           ion-icon.profile-icon(name='radio-button-on-outline')
       .home-content
         .overview
