reviewer-view update

--- a/views/reviewer-view.pug
+++ b/views/reviewer-view.pug
@@ -79,7 +79,8 @@ html
                   ion-icon(name='chevron-down-outline')
               ul.filter-select
                 li.filter-items Approved
-                li.filter-items Pending
+                li.filter-items Ongoing
+                li.filter-items Standby
                 li.filter-items Disapproved
             // sort
             .sort-box
