--- a/public/stylesheets/reviewer-view.css
+++ b/public/stylesheets/reviewer-view.css
@@ -29,6 +29,7 @@
 .filter-box {
     position: relative;
     max-width: 320px;
+    z-index: 1;
     width: 10%;
     float: right;
     margin-right: 20px;
@@ -109,6 +110,38 @@
     width: 10px;
 }
 
+.searchbar {
+    height: 5vh;
+    float: right;
+    margin-right: 50px;
+    width: 30vh;
+    display: flex;
+    cursor: pointer;
+    padding: 10px 20px;
+    background-color: #ffffff;
+    border-radius: 30px;
+    align-items: center;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+}
+
+.searchbar:hover input {
+    width: 400px;
+}
+
+.searchbar input {
+    width: 0;
+    outline: none;
+    border: none;
+    font-weight: 500;
+    transition: 0.8s;
+    background: transparent;
+}
+
+.searchbar ion-icon {
+    color: black;
+    font-size: 20px;
+}
+
 .sort-btn .icon,
 .filter-btn .icon {
     display: flex;
@@ -146,7 +179,7 @@
 	margin-top: 10px;
 	margin-right: 10px;
 	padding: 20px;
-	height: 100;
+	height: 100px;
 }
 .content{
 	width: 70%;
