--- a/views/reviewer-review.pug
+++ b/views/reviewer-review.pug
@@ -73,7 +73,7 @@ html
           .title
             ion-icon.content-icon(name='bar-chart-outline')
             span.text For Approvals
-          #approvals
+          form#approvals(method='POST')
       #viewer
             // CUSTOM JS
             script(type='module' src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js')
