approve/disapprove on reviewer-review

--- a/views/reviewer-review.pug
+++ b/views/reviewer-review.pug
@@ -74,6 +74,15 @@ html
             ion-icon.content-icon(name='bar-chart-outline')
             span.text For Approvals
           form#approvals(method='POST')
+          .buttons
+            button#approveBtn Approve Document
+            #approveWrap.hidden
+              p
+                | Approve this document?
+                span
+                  button#updateA Approve
+            button#disapproveBtn Dispprove Document
+            #disapproveWrap.hidden
       #viewer
             // CUSTOM JS
             script(type='module' src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js')
