--- a/public/stylesheets/reviewer-review.css
+++ b/public/stylesheets/reviewer-review.css
@@ -62,3 +62,52 @@ label {
 	float: right;
 	margin-bottom: 20px;
 }
+
+.buttons{
+	width: 71.1%; 
+	height: 100%;
+	float: right;
+}
+#approveWrap,
+#disapproveWrap {
+  margin-top: 0px;
+  background: var(--primary-color-light);
+  width: auto;
+  height: 80px;
+  padding: 15px 50px 15px 50px;
+}
+
+#approveBtn,
+#disapproveBtn{
+  display: block;
+  border: none;
+  width: 100%;
+  height: 35px;
+  line-height: 35px;
+  background: var(--primary-color);
+  text-align: center;
+  color: white;
+  text-decoration: none;
+}
+
+#approveBtn:hover,
+#disapproveBtn:hover {
+  text-decoration: none;
+  border: none;
+  background:  var(--box1-color);
+}
+
+#approveWrap.hidden,
+#disapproveWrap.hidden {
+    display: none;
+}
+
+.approve{
+	background: var(--primary-color);
+	border-radius: 20px;
+	color: var(--primary-color-light);
+	width: 20%;
+	height: 45px;
+	border: none;
+	float: right;
+}
