--- a/views/reviewer-review.pug
+++ b/views/reviewer-review.pug
@@ -83,4 +83,5 @@ html
     // CUSTOM JS
     script(type='module' src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js')
     script(nomodule='' src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js')
+    script(src='/javascripts/sidebar.js')
     script(src='/javascripts/reviewer-review.js')
