--- a/views/index.pug
+++ b/views/index.pug
@@ -45,7 +45,7 @@ header
           ion-icon(name='lock-closed')
         input(type='password' name='password' required='')
         label Password
-      button.btn(id="submit" type='submit' onClick='loginresult()') Login
+      button.btn(type='submit' id='submit' action='loginResult()') Login
 // HERO SECTION
 section#home.hero
   h2
